Updated collector to Java 17 supported style